--- a/src/app/partials/navbar/navbar.component.scss
+++ b/src/app/partials/navbar/navbar.component.scss
@@ -29,6 +29,10 @@
   letter-spacing: .5px;
 }
 
+.logo-text {
+  text-decoration: none;
+}
+
 .right-actions {
   display: flex;
   align-items: center;
