--- a/src/app/partials/footer/footer.component.html
+++ b/src/app/partials/footer/footer.component.html
@@ -8,10 +8,10 @@
     <div class="footer-links">
       <h3>Enlaces</h3>
       <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Eventos</a></li>
-        <li><a href="#">Registrarse</a></li>
-        <li><a href="#">Iniciar Sesión</a></li>
+        <li><a href="/home">Inicio</a></li>
+        <li><a href="/events">Eventos</a></li>
+        <li><a href="/register">Registrarse</a></li>
+        <li><a href="/login">Iniciar Sesión</a></li>
       </ul>
     </div>
 
