--- a/src/app/partials/registro-admin/registro-admin.component.scss
+++ b/src/app/partials/registro-admin/registro-admin.component.scss
@@ -40,7 +40,7 @@ mat-form-field{
   width: 90%!important;
   margin-left: 5%;
   text-align: left!important;
-  min-height: 72px;
+  height: 40px;
 }
 
 .mat-form-field-wrapper {
