--- a/src/app/partials/registro-estudiante/registro-estudiante.component.html
+++ b/src/app/partials/registro-estudiante/registro-estudiante.component.html
@@ -1,1 +1,67 @@
-<p>registro-estudiante works!</p>
+<div class="wrapper">
+  <!-- Va a englobar todo el formulario con la cabecera -->
+  <div class="section-registro">
+    <div class="body-registro">
+      <div class="row mt-3 mb-3">
+        <div class="form-group col-12">
+          <label class="title-user" for="tipo_usuario"><strong>Ingresa los datos del estudiante</strong></label>
+        </div>
+      </div>
+      <!-- Aquí empiezan los campos del formulario -->
+
+      <mat-form-field class="mat-input" appearance="outline">
+        <mat-label>Nombre</mat-label>
+        <input matInput [(ngModel)]="estudiante.first_name" placeholder="Escribe nombre"
+          (keypress)="soloLetras($event)">
+      </mat-form-field>
+      <div *ngIf="errors.first_name" class="invalid-feedback">{{ errors.first_name }}</div>
+
+      <mat-form-field class="mat-input" appearance="outline">
+        <mat-label>Apellidos</mat-label>
+        <input matInput [(ngModel)]="estudiante.last_name" placeholder="Escribe apellidos"
+          (keypress)="soloLetras($event)">
+      </mat-form-field>
+      <div *ngIf="errors.last_name" class="invalid-feedback">{{ errors.last_name }}</div>
+
+      <mat-form-field class="mat-input" appearance="outline">
+        <mat-label>Correo electrónico</mat-label>
+        <input matInput [(ngModel)]="estudiante.email" placeholder="Escribe correo electrónico" [disabled]="editar">
+      </mat-form-field>
+      <div *ngIf="errors.email" class="invalid-feedback">{{ errors.email }}</div>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Contraseña</mat-label>
+        <input matInput [(ngModel)]="estudiante.password" type="{{ inputType_1 }}" placeholder="Escribe contraseña"
+          [disabled]="editar">
+        <mat-icon matSuffix class="eye-icon" (click)="showPassword()">{{hide_1 ? 'visibility_off' :
+          'visibility'}}</mat-icon>
+      </mat-form-field>
+      <div *ngIf="errors.password" class="invalid-feedback">{{ errors.password }}</div>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Confirmar contraseña</mat-label>
+        <input matInput [(ngModel)]="estudiante.confirmar_password" type="{{ inputType_2 }}"
+          placeholder="Confirma la contraseña" [disabled]="editar">
+        <mat-icon matSuffix class="eye-icon" (click)="showPwdConfirmar()">{{hide_2 ? 'visibility_off' :
+          'visibility'}}</mat-icon>
+      </mat-form-field>
+      <div *ngIf="errors.confirmar_password" class="invalid-feedback">{{ errors.confirmar_password }}</div>
+
+      <div class="checkbox-row">
+        <mat-checkbox [(ngModel)]="estudiante.terms" (change)="validate()">
+          Acepto los términos y condiciones de uso de la plataforma
+        </mat-checkbox>
+      </div>
+      <div *ngIf="errors.terms" class="invalid-feedback">{{ errors.terms }}</div>
+
+
+      <div class="section-buttons">
+        <button class="btn btn-danger" (click)="regresar()">Cancelar</button>
+        <button *ngIf="!editar" class="btn btn-primary" type="submit" (click)="registrar()">Crear cuenta</button>
+        <button *ngIf="editar" class="btn btn-primary" type="submit" (click)="actualizar()">Actualizar</button>
+      </div>
+
+
+    </div>
+  </div>
+</div>
