--- a/src/app/screens/auth/register-screen/register-screen.component.html
+++ b/src/app/screens/auth/register-screen/register-screen.component.html
@@ -4,6 +4,7 @@
     <div class="header-registro">
     </div>
     <div class="body-registro">
+      <!-- Aquí va a ir el slider de imágenes -->
       <section class="slider">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
           <div class="carousel-indicators">
@@ -27,40 +28,23 @@
         </div>
       </section>
       <!-- Aquí van a ir los radio buttons para elegir el rol de usuario a registrar -->
+      <!--   -->
       <section class="rol-user">
         <div class="container">
-          <!-- Radio buttons -->
           <div class="row mt-5" style="text-align: center;">
-            <div class="form-group col-12">
-              <label class="title-user" for="tipo_usuario">Tipo de usuario</label>
-            </div>
-            <div class="row mt-3" style="text-align: center;">
-              <div class="form-group col-12">
-                <mat-radio-group [(ngModel)]="user.tipo_usuario" (change)="radioChange($event)" [disabled]="editar">
-                  <mat-radio-button value="administrador">Administrador</mat-radio-button>
-                  <mat-radio-button value="organizador">Organizador</mat-radio-button>
-                  <mat-radio-button value="estudiante">Estudiante</mat-radio-button>
-                </mat-radio-group>
-              </div>
-            </div>
-            <!-- Formularios de todos los usuarios -->
+
             <section class="forms-registro">
-              <!-- Formulario del admin -->
-              <section class="registro-admin" *ngIf="isAdmin">
-                <app-registro-admin [rol]="tipo_user" [datos_user]="user"></app-registro-admin>
-              </section>
-              <!-- Formulario del alumno -->
-              <section class="registro-organizador" *ngIf="isOrganizador">
-                <app-registro-organizador [rol]="tipo_user" [datos_user]="user"></app-registro-organizador>
-              </section>
-              <!-- Formulario del maestro -->
-              <section class="registro-estudiantes" *ngIf="isEstudiante">
+              <section class="registro-estudiantes">
                 <app-registro-estudiante [rol]="tipo_user" [datos_user]="user"></app-registro-estudiante>
               </section>
             </section>
           </div>
         </div>
       </section>
+      <p class="helper">
+        ¿Ya tienes cuenta?
+        <button type="button" id="goLoginBtn" class="link" routerLink="/login">Inicia sesión</button>
+      </p>
     </div>
   </div>
 </div>
