--- a/src/app/screens/auth/register-screen/register-screen.component.scss
+++ b/src/app/screens/auth/register-screen/register-screen.component.scss
@@ -139,3 +139,30 @@ button {
   --mat-radio-ripple-color: #000;
   --mat-radio-checked-ripple-color: #0092B8;
 }
+
+/* ==========================================================================
+   Texto de Ayuda (¿Ya tienes cuenta? Inicia sesión)
+   ========================================================================== */
+p.helper {
+  margin-top: 30px; // Espacio superior
+  font-size: 15px;
+  color: #555;
+  text-align: center;
+}
+
+.link {
+  background: none;
+  border: none;
+  padding: 0;
+  color: #007bff; // Color azul para el enlace
+  text-decoration: none; // Quitar subrayado si lo tiene por defecto
+  font-size: 15px;
+  font-weight: 600; // Un poco más negrita
+  cursor: pointer;
+  transition: color 0.3s ease;
+
+  &:hover {
+    color: darken(#007bff, 10%);
+    text-decoration: underline; // Subrayar al pasar el mouse
+  }
+}
