--- a/src/app/screens/auth/register-screen/register-screen.component.html
+++ b/src/app/screens/auth/register-screen/register-screen.component.html
@@ -43,8 +43,9 @@
       </section>
       <p class="helper">
         ¿Ya tienes cuenta?
-        <button type="button" id="goLoginBtn" class="link" routerLink="/login">Inicia sesión</button>
+        <button type="button" class="link" (click)="goLogin()">Inicia sesión</button>
       </p>
+      >
     </div>
   </div>
 </div>
