--- a/src/app/partials/sidebar/sidebar.component.html
+++ b/src/app/partials/sidebar/sidebar.component.html
@@ -1,1 +1,78 @@
-<p>sidebar works!</p>
+<div class="gtea-layout">
+
+  <header class="gtea-navbar">
+
+    <nav class="top-navbar">
+      <div class="brand">
+        <div class="logo-box"></div>
+        <a class="logo-text">GTEA</a>
+      </div>
+      <div class="navbar-right">
+        <a routerLink="/reportes" class="navbar-icon-item">
+          <mat-icon>notifications</mat-icon>
+        </a>
+        <a routerLink="/login" class="navbar-action-item">
+          <mat-icon>exit_to_app</mat-icon>
+          <span>Cerrar Sesión</span>
+        </a>
+      </div>
+    </nav>
+  </header>
+
+  <div class="gtea-main-content">
+    <aside class="gtea-sidebar">
+       <nav>
+        <a (click)="goDashboard()" routerLink="/dashboard" class="sidebar-item active" routerLinkActive="active">
+          <i class="fas fa-tachometer-alt"></i>
+          <span>Dashboard</span>
+        </a>
+        <a (click)="goEventosAdmin()" *ngIf="hasRole(ROLES.ADMINISTRADOR) || hasRole(ROLES.ESTUDIANTE)" routerLink="/eventos" class="sidebar-item" routerLinkActive="active">
+          <i class="fas fa-calendar-alt"></i>
+          <span>Eventos</span>
+        </a>
+
+        <a (click)="goUsuarios()" *ngIf="hasRole(ROLES.ADMINISTRADOR)" routerLink="/usuarios" class="sidebar-item" routerLinkActive="active">
+          <i class="fas fa-users"></i>
+          <span>Usuarios</span>
+        </a>
+
+        <a (click)="goCategorias()" *ngIf="hasRole(ROLES.ADMINISTRADOR)" routerLink="/categorias" class="sidebar-item">
+          <i class="fas fa-list-alt"></i>
+          <span>Categorías</span>
+        </a>
+
+        <a (click)="goSedes()" *ngIf="hasRole(ROLES.ADMINISTRADOR)" routerLink="/sedes" class="sidebar-item">
+          <i class="fas fa-map-marker-alt"></i>
+          <span>Sedes/Aulas</span>
+
+        </a>
+        <a (click)="goReportes()" *ngIf="hasRole(ROLES.ADMINISTRADOR)" routerLink="/reportes" class="sidebar-item">
+          <i class="fas fa-chart-bar"></i>
+          <span>Reportes</span>
+        </a>
+
+        <a (click)="goEventos()" *ngIf="hasRole(ROLES.ORGANIZADOR)" routerLink="/mis-eventos" class="sidebar-item">
+          <i class="fas fa-chart-bar"></i>
+          <span>Mis eventos</span>
+        </a>
+
+        <a (click)="goVerEventos()" *ngIf="hasRole(ROLES.ORGANIZADOR)" routerLink="/mis-inscripciones" class="sidebar-item">
+          <i class="fas fa-chart-bar"></i>
+          <span>Ver eventos</span>
+        </a>
+
+        <a  (click)="goMisInscripciones()" *ngIf="hasRole(ROLES.ESTUDIANTE)"routerLink="/reportes" class="sidebar-item">
+          <i class="fas fa-chart-bar"></i>
+          <span>Mis inscripciones</span>
+        </a>
+
+      </nav>
+      <div class="sidebar-footer">
+        <button>Gestionar las cookies o rechazarlas</button>
+      </div>
+    </aside>
+
+    <main class="gtea-content">
+    </main>
+  </div>
+</div>
