Ya quedo eventos publico

--- a/src/app/partials/navbar/navbar.component.html
+++ b/src/app/partials/navbar/navbar.component.html
@@ -31,7 +31,7 @@
       <li class="nav-item" routerLink="/login" routerLinkActive="active" (click)="closeSidebar()">
         <span class="material-icons">login</span><span>Iniciar Sesión</span>
       </li>
-      <li class="nav-item" routerLink="/registro" routerLinkActive="active" (click)="closeSidebar()">
+      <li class="nav-item" routerLink="/register" routerLinkActive="active" (click)="closeSidebar()">
         <span class="material-icons">person_add</span><span>Crear Cuenta</span>
       </li>
     </ul>
